fix(mobile): swipe to reveal feeds holder on safari and firefox
Safari and Firefox mobile wouldn't allow swiping to reveal the feeds holder, it would always snap back to the content-wrap. Seems like it needs scroll-snap-align targets to have a dimension.

This might also fix another issue in Chromium browsers where initially toggling the action-menu would trigger slowly scrolling towards the feeds-holder.

--- a/src/_base.less
+++ b/src/_base.less
@@ -64,6 +64,8 @@
     &::before {
       content: "";
       position: absolute;
+      width: 1px;
+      height: 1px;
       scroll-snap-align: start;
     }
   }
